pdfreader - current
---------------------------
 - a85decode correctly handles the adobe ascii85 alphabet.

pdfreader 0.1.10
---------------------------
 - Issue #77: Codecs issue
 - minor documentation updates

pdfreader 0.1.9
---------------------------
 - Issue #67: Canvas cache for viewer
 - Issue #71: Unsupported security handler version: 1
 - Issue #72: Add a method to return document metadata
 - Issue #68: Work around wrong stream `Length`

pdfreader 0.1.8
---------------------------
 - Issue #63: SimpleCanvas.fromObject images copying issue fixed
 - Issue #64: Allow indirect stream objects have missing `endobj`.

pdfreader 0.1.7
---------------------------
 - Issue #60: Python 3.9 support
 - Issue #59: Use `pycryptodome` instead of `pycrypto`
 - Issue #31: Canvas and page iterators added to PDFViewver

pdfreader 0.1.6
---------------------------
 - Missing `Resources.Properties` field added.
 - Pillow >= 7.1.0 version bump (security issues)
 - Issue #51: Current page annotations & hyperlinks.
 - Issue #33: Encryption support

pdfreader 0.1.5, 2020-08-27
---------------------------
 - Issue #41: RecursionError: maximum recursion depth exceeded
 - Issue #39: Pillow version bump

pdfreader 0.1.4, 2020-02-21
---------------------------
 - Issue #34: Stream Length can be Indirect Reference now.
 - Issue #29: Optional Type=Encoding key for Encoding dictionary
 - Issue #27: Empty XObject resources cause AttributeError
 - Issue #25: pdfreader.exceptions.ParserException: Dict, stream or hexstring expected
 - Issue #23: BI/EI: TypeError: can't concat bytes to NoneType
 - Issue #18: pdfreader.parsers.cmap.CMapParserException: Regular non-digit character expected
 - Issue #17: NotImplementedError: DCTDecode
 - Issue #16: RecursionError: maximum recursion depth exceeded

pdfreader 0.1.3, 2019-12-20
---------------------------
 - CMap-based text decoding issue fixed
 - Multiple filters support for inline images added